--- a/map1.html
+++ b/map1.html
@@ -254,7 +254,6 @@
           el.classList.add('hidden');
           btn.textContent = capitalizeFirstLetter(targetId.replace(/List$/, ''));
         }
-        filterGeoLayer(); // Mise à jour filrage aussi au toggle liste
       });
     });
   }
@@ -265,22 +264,12 @@
 
   document.getElementById('toggleLeftBtn').addEventListener('click', () => {
     const left = document.getElementById('sidebar-left');
-    if (left.style.display === 'none') {
-      left.style.display = 'block';
-    } else {
-      left.style.display = 'none';
-    }
-    filterGeoLayer(); // mettre à jour filtre si panneau masqué
+    left.style.display = (left.style.display === 'none') ? 'block' : 'none';
   });
 
   document.getElementById('toggleRightBtn').addEventListener('click', () => {
     const right = document.getElementById('sidebar-right');
-    if (right.style.display === 'none') {
-      right.style.display = 'block';
-    } else {
-      right.style.display = 'none';
-    }
-    filterGeoLayer();
+    right.style.display = (right.style.display === 'none') ? 'block' : 'none';
   });
 
   function filterGeoLayer() {
@@ -300,13 +289,8 @@
       show = show && filterState.agence.get(valAgence) !== false;
       show = show && filterState.region.get(valRegion) !== false;
       show = show && filterState.antenne.get(valAntenne) !== false;
-
-      if(document.getElementById('sidebar-left').style.display==='none') show = false;
-
       show = show && filterState.departement.get(valDepartement) !== false;
       show = show && filterState.texte2.get(valTexte2) !== false;
-
-      if(document.getElementById('sidebar-right').style.display==='none') show = false;
 
       if (show) {
         layer.addTo(map);
@@ -358,62 +342,6 @@
       updateSelectAllCheckbox(filt);
       setupSelectAllListener(filt);
     });
-  }
-
-  function updateMapWithExtraProperties() {
-    fetch('contours-codes-postaux.geojson')
-      .then(res => {
-        if (!res.ok) throw new Error("Le fichier GeoJSON n'a pas été chargé correctement.");
-        return res.json();
-      })
-      .then(data => {
-        if (geoLayer) map.removeLayer(geoLayer);
-
-        geoLayer = L.geoJSON(data, {
-          style: feature => {
-            let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
-            let extras = extraProperties[cp] || {};
-            return {
-              fillColor: getKeyIgnoreCase(extras, "Fond_couleur") || "#66cc66",
-              color: getKeyIgnoreCase(extras, "Ligne_couleur") || "#000000",
-              weight: 1,
-              opacity: 1,
-              fillOpacity: 0.7
-            };
-          },
-          onEachFeature: (feature, layer) => {
-            let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
-            let extras = extraProperties[cp] || {};
-
-            let texteParts = [];
-            ["Texte1", "Texte2", "Texte3", "Texte4"].forEach(field => {
-              let val = getKeyIgnoreCase(extras, field);
-              if (val) texteParts.push(val);
-            });
-
-            let tooltipText = texteParts.join(" ");
-            let policeCouleur = getKeyIgnoreCase(extras, "police couleur") || '#000000';
-
-            layer.bindTooltip(
-              `<span style="color: ${policeCouleur};">${tooltipText || ("Code Postal : " + cp)}</span>`,
-              {className: 'custom-tooltip'}
-            );
-
-            let clicUrl = getKeyIgnoreCase(extras, "Clic URL");
-            if (clicUrl && clicUrl.trim().length > 0) {
-              layer.on("click", () => window.open(clicUrl, '_blank'));
-              layer.setStyle({ cursor: "pointer" });
-            }
-          }
-        }).addTo(map);
-
-        filterGeoLayer();
-      })
-      .catch(err => {
-        alert(err.message);
-        console.error(err);
-        map.setView([46.6, 2.4], 6);
-      });
   }
 
   document.getElementById('convertBtn').onclick = () => {
