--- a/map1.html
+++ b/map1.html
@@ -138,7 +138,6 @@
       <div id="antenneList"></div>
     </div>
 
-    <!-- Ajout DSP -->
     <button class="toggle-btn" data-target="dsp">DSP</button>
     <div id="filter-dsp" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="dsp-select-all" checked> Tout DSP</label>
@@ -179,7 +178,7 @@
     antenne: new Map(),
     departement: new Map(),
     texte2: new Map(),
-    dsp: new Map()  // Ajout DSP
+    dsp: new Map()
   };
 
   let filterState = {
@@ -188,7 +187,7 @@
     antenne: new Map(),
     departement: new Map(),
     texte2: new Map(),
-    dsp: new Map()  // Ajout DSP
+    dsp: new Map()
   };
 
   function getKeyIgnoreCase(obj, key) {
@@ -199,7 +198,6 @@
     return null;
   }
 
-  // Construire la liste des cases à cocher pour un filtre donné
   function buildFilterList(filterName, containerId) {
     const container = document.getElementById(containerId);
     container.innerHTML = '';
@@ -283,7 +281,7 @@
     right.style.display = (right.style.display === 'none') ? 'block' : 'none';
   });
 
-  // Fonction d'affichage/filtrage des couches sur la carte selon états des filtres
+  // Correction : filtre basé sur la combinaison de tous les filtres
   function filterGeoLayer() {
     if (!geoLayer) return;
     geoLayer.eachLayer(layer => {
@@ -297,14 +295,13 @@
       let valTexte2 = getKeyIgnoreCase(extras, "Texte2") || "";
       let valDSP = getKeyIgnoreCase(extras, "DSP") || "";
 
-      let show = true;
-
-      show = show && filterState.agence.get(valAgence) !== false;
-      show = show && filterState.region.get(valRegion) !== false;
-      show = show && filterState.antenne.get(valAntenne) !== false;
-      show = show && filterState.departement.get(valDepartement) !== false;
-      show = show && filterState.texte2.get(valTexte2) !== false;
-      show = show && filterState.dsp.get(valDSP) !== false;
+      let show =
+        filterState.agence.get(valAgence) !== false &&
+        filterState.region.get(valRegion) !== false &&
+        filterState.antenne.get(valAntenne) !== false &&
+        filterState.departement.get(valDepartement) !== false &&
+        filterState.texte2.get(valTexte2) !== false &&
+        filterState.dsp.get(valDSP) !== false;
 
       if (show) {
         layer.addTo(map);
@@ -314,7 +311,6 @@
     });
   }
 
-  // Met à jour les valeurs distinctes pour chaque filtre en fonction des données
   function updateDistinctValues(jsonData) {
     for (const key in distinctValues) {
       distinctValues[key].clear();
@@ -352,7 +348,6 @@
     });
   }
 
-  // Construire toutes les listes de filtres existantes
   function buildFilterLists() {
     ['agence', 'region', 'antenne', 'departement', 'texte2', 'dsp'].forEach(filter => {
       buildFilterList(filter, filter + 'List');
@@ -362,9 +357,10 @@
       updateSelectAllCheckbox(filt);
       setupSelectAllListener(filt);
     });
+
+    setupFilterToggleButtons();
   }
 
-  // Gestionnaire du bouton pour charger le fichier Excel
   document.getElementById('convertBtn').onclick = () => {
     const fileInput = document.getElementById('uploadExcel');
     const file = fileInput.files[0];
@@ -388,14 +384,12 @@
         if (cp.length > 0) extraProperties[cp] = item;
       });
 
-      // Initialiser filtre tout coché
+      // Initialiser avec tout coché au départ
       Object.keys(filterState).forEach(key => {
         filterState[key].forEach((_, val) => filterState[key].set(val, true));
       });
 
       buildFilterLists();
-
-      setupFilterToggleButtons();
 
       map.setView([46.6, 2.4], 6);
 
@@ -405,7 +399,6 @@
     reader.readAsArrayBuffer(file);
   };
 
-  // Met à jour la couche GeoJSON et la relie à la carte
   function updateMapWithExtraProperties() {
     fetch('contours-codes-postaux.geojson')
       .then(res => {
